k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ohisee-frontend
  labels:
    app.kubernetes.io/name: ohisee-frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ohisee-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
